--- a/client/src/assets/styles/definitions/_colors.scss
+++ b/client/src/assets/styles/definitions/_colors.scss
@@ -7,4 +7,7 @@ $color-primary-2: #d27d2c;
 $color-primary-3: #dad45e;
 $color-secondary-1: #4e4a4e;
 
+$color-bar-bg-red: #d04648;
+$color-bar-border-red: #442434;
+
 $color-border: $color-black;
