--- a/client/src/assets/styles/components/page/_inputs.scss
+++ b/client/src/assets/styles/components/page/_inputs.scss
@@ -1,9 +1,12 @@
 @import '../../definitions/colors';
+@import '../../definitions/units';
 
 .input-text {
   &__wrapper {
     display: flex;
     flex-direction: column;
+    position: relative;
+    width: 100%;
   }
 
   &__input {
@@ -14,9 +17,31 @@
     font-size: 1.5rem;
     padding: 0.5rem;
     font-family: inherit;
+
+    &--icon {
+      padding-right: $px-64;
+    }
   }
 
   &__label {
     color: $color-primary-3;
+  }
+
+  &__icon {
+    position: absolute;
+    width: $px-48;
+    height: $px-48;
+    padding: $px-8;
+    right: 0;
+    top: $px-16;
+
+    &--btn {
+      cursor: pointer;
+      transition: transform .2s;
+
+      &:hover {
+        transform: scale(1.15);
+      }
+    }
   }
 }
