--- a/client/src/assets/styles/components/page/_pixeled-image.scss
+++ b/client/src/assets/styles/components/page/_pixeled-image.scss
@@ -1,6 +1,5 @@
+@import '../../definitions/images';
+
 .pixel-image__img {
-  image-rendering: -moz-crisp-edges;
-  image-rendering: -webkit-crisp-edges;
-  image-rendering: pixelated;
-  image-rendering: crisp-edges;
+  @include pixelArtImage();
 }
