--- a/client/src/assets/styles/components/page/_buttons.scss
+++ b/client/src/assets/styles/components/page/_buttons.scss
@@ -1,4 +1,5 @@
 @import '../../definitions/colors';
+@import '../../definitions/selection';
 
 .button {
   &__wrapper {
@@ -13,8 +14,10 @@
   }
 
   &__btn {
+    @include preventSelection;
     background: inherit;
     border: none;
+    outline: none;
     font-family: inherit;
     padding: 0;
     color: $color-black;
