--- a/client/src/assets/styles/components/page/_buttons.scss
+++ b/client/src/assets/styles/components/page/_buttons.scss
@@ -7,10 +7,10 @@
     background-color: $color-primary-3;
     font-weight: 600;
     font-size: 1.5rem;
-    padding: 0.5rem;
     border-radius: 10px;
     min-width: 200px;
     cursor: pointer;
+    padding: 0;
   }
 
   &__btn {
@@ -19,12 +19,13 @@
     border: none;
     outline: none;
     font-family: inherit;
-    padding: 0;
     color: $color-black;
     text-align: center;
     font-weight: bold;
     font-size: 1.5rem;
     width: 100%;
     cursor: inherit;
+    border-radius: 10px;
+    padding: 0.5rem;
   }
 }
