feat: connected summoner data for initial game data

--- a/client/src/assets/styles/definitions/_colors.scss
+++ b/client/src/assets/styles/definitions/_colors.scss
@@ -5,6 +5,7 @@ $color-background: #757161;
 $color-primary-1: #854c30;
 $color-primary-2: #d27d2c;
 $color-primary-3: #dad45e;
+$color-primary-3-30: #B0AC58;
 $color-secondary-1: #4e4a4e;
 
 $color-bar-bg-red: #d04648;
