feat: error and success button

--- a/client/src/assets/styles/definitions/_colors.scss
+++ b/client/src/assets/styles/definitions/_colors.scss
@@ -8,6 +8,9 @@ $color-primary-3: #dad45e;
 $color-primary-3-30: #B0AC58;
 $color-secondary-1: #4e4a4e;
 
+$color-error-1: #d9534f;
+$color-success-1: #5cb85c;
+
 $color-bar-bg-red: #d04648;
 $color-bar-border-red: #442434;
 
