--- a/client/src/assets/styles/components/page/_buttons.scss
+++ b/client/src/assets/styles/components/page/_buttons.scss
@@ -11,6 +11,14 @@
     min-width: 200px;
     cursor: pointer;
     padding: 0;
+
+    &--success {
+      background-color: $color-success-1;
+    }
+
+    &--error {
+      background-color: $color-error-1;
+    }
   }
 
   &__btn {
