feat: added animation

--- a/game/client/src/assets/styles/definitions/_colors.scss
+++ b/game/client/src/assets/styles/definitions/_colors.scss
@@ -3,7 +3,11 @@ $color-black: black;
 
 $color-background: #757161;
 $color-primary-1: #854c30;
+
+$color-primary-22: #FF4500;
 $color-primary-2: #d27d2c;
+$color-primary-21: #FFA500;
+
 $color-primary-3: #dad45e;
 $color-primary-3-30: #B0AC58;
 $color-secondary-1: #4e4a4e;
