--- a/game/client/src/assets/styles/components/page/_links.scss
+++ b/game/client/src/assets/styles/components/page/_links.scss
@@ -1,15 +1,20 @@
+@import '../../definitions/colors';
+
 .link {
   &__btn {
     width: 100%;
     height: 100%;
-    font-size: 14px; /* Dopasowanie rozmiaru czcionki */
+    font-size: 14px;
     margin: 5px;
-    color: #FFA500; /* Kolor pomarańczowy, pasujący do formularza */
-    text-decoration: none; /* Usunięcie podkreślenia */
+    color: $color-primary-21;
+    text-decoration: none;
+    display: inline-block;
+    transition: color 0.3s ease, transform 0.3s ease;
 
     &:hover {
-      color: #FF4500; /* Ciemniejszy pomarańczowy kolor po najechaniu */
+      color: $color-primary-22;
       text-decoration: underline;
+      transform: scale(1.1);
     }
   }
 }
