--- a/game/client/src/assets/styles/components/page/_links.scss
+++ b/game/client/src/assets/styles/components/page/_links.scss
@@ -10,6 +10,7 @@
     text-decoration: none;
     display: inline-block;
     transition: color 0.3s ease, transform 0.3s ease;
+    cursor: pointer;
 
     &:hover {
       color: $color-primary-22;
