--- a/game/client/src/assets/styles/definitions/_colors.scss
+++ b/game/client/src/assets/styles/definitions/_colors.scss
@@ -4,9 +4,9 @@ $color-black: black;
 $color-background: #757161;
 $color-primary-1: #854c30;
 
-$color-primary-22: #FF4500;
+$color-primary-2-darken: #FF4500;
 $color-primary-2: #d27d2c;
-$color-primary-21: #FFA500;
+$color-primary-2-lighten: #FFA500;
 
 $color-primary-3: #dad45e;
 $color-primary-3-30: #B0AC58;
