--- a/game/client/src/pages/shared/lobby-layout/nav/_lobby-nav.scss
+++ b/game/client/src/pages/shared/lobby-layout/nav/_lobby-nav.scss
@@ -1,5 +1,6 @@
 @import "../../../../assets/styles/definitions/colors";
 @import "../../../../assets/styles/definitions/units";
+@import "../../../../assets/styles/definitions/images";
 
 .lobby-navbar {
   &__title {
@@ -10,7 +11,7 @@
   &__nav {
     position: fixed;
     top: 0;
-    width: 100vw;
+    width: 100%;
     background-color: #2b2b2b;
     display: flex;
     justify-content: space-between;
@@ -65,9 +66,16 @@
     text-decoration: none;
     font-size: $px-16;
     transition: color 0.3s ease;
+    display: flex;
+    gap: $px-10;
+    align-items: center;
 
     &:hover {
       color: $color-primary-2-darken;
+    }
+
+    img {
+      @include pixelArtImage();
     }
   }
 }
