--- a/game/client/src/assets/styles/definitions/_colors.scss
+++ b/game/client/src/assets/styles/definitions/_colors.scss
@@ -13,6 +13,7 @@ $color-primary-3-30: #B0AC58;
 $color-secondary-1: #4e4a4e;
 
 $color-error-1: #d9534f;
+$color-error-validation-1: #FF6347;
 $color-success-1: #5cb85c;
 
 $color-bar-bg-red: #d04648;
