refactor: LangSwitcher code refactoring

--- a/game/client/src/assets/styles/definitions/_colors.scss
+++ b/game/client/src/assets/styles/definitions/_colors.scss
@@ -20,3 +20,9 @@ $color-bar-bg-red: #d04648;
 $color-bar-border-red: #442434;
 
 $color-border: $color-black;
+
+// TODO: better names?
+$color-gray-333: #333;
+$color-gray-444: #444;
+$color-gray-555: #555;
+$color-gray-CCC: #ccc;
