--- a/game/client/src/pages/shared/components/nav/_lang-switcher.scss
+++ b/game/client/src/pages/shared/components/nav/_lang-switcher.scss
@@ -11,14 +11,14 @@
 
 .language-selector-toggler {
   &__wrapper {
-    background-color: #444;
-    color: #fff;
+    background-color: $color-gray-444;
+    color: $color-white;
     padding: 8px 12px;
     border: none;
     cursor: pointer;
     display: flex;
     align-items: center;
-    gap: 0.75rem;
+    gap: $px-12;
   }
 
   &__toggler {
@@ -38,20 +38,20 @@
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #333;
-    border: 1px solid #ccc;
+    background-color: $color-gray-333;
+    border: 1px solid $color-gray-CCC;
     width: 150px;
     z-index: 10;
   }
 
   &__item {
-    padding: 10px;
+    padding: $px-10;
     cursor: pointer;
     display: flex;
     align-items: center;
 
     &:hover {
-      background-color: #555;
+      background-color: $color-gray-555;
     }
   }
 
