feat: added styled agreement checkboxes

--- a/game/client/src/assets/styles/definitions/_colors.scss
+++ b/game/client/src/assets/styles/definitions/_colors.scss
@@ -14,6 +14,7 @@ $color-secondary-1: #4e4a4e;
 
 $color-error-1: #d9534f;
 $color-error-validation-1: #FF6347;
+$color-error-validation-1-border: darken($color-error-validation-1, 40%);
 $color-success-1: #5cb85c;
 
 $color-bar-bg-red: #d04648;
