--- a/game/client/src/assets/styles/components/page/_buttons.scss
+++ b/game/client/src/assets/styles/components/page/_buttons.scss
@@ -1,3 +1,4 @@
+@import '../../definitions/borders-radius';
 @import '../../definitions/colors';
 @import '../../definitions/selection';
 
@@ -6,8 +7,8 @@
     border: 3px solid $color-black;
     background-color: $color-primary-3;
     font-weight: 600;
-    font-size: 1.5rem;
-    border-radius: 10px;
+    font-size: $px-24;
+    border-radius: $border-radius-input-standard;
     min-width: 200px;
     cursor: pointer;
     padding: 0;
@@ -30,10 +31,10 @@
     color: $color-black;
     text-align: center;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: $px-24;
     width: 100%;
     cursor: inherit;
-    border-radius: 10px;
-    padding: 0.5rem;
+    border-radius: $border-radius-input-standard;
+    padding: $px-8;
   }
 }
