--- a/game/client/src/assets/styles/definitions/_toastify.scss
+++ b/game/client/src/assets/styles/definitions/_toastify.scss
@@ -1,10 +1,11 @@
+@import 'borders-radius';
 @import 'colors';
 
 .Toastify__toast-container {
   background-color: $color-primary-2;
   border: 2px solid $color-black;
   padding: 0.375rem;
-  border-radius: 10px;
+  border-radius: $border-radius-input-standard;
 }
 
 .Toastify__toast {
@@ -12,7 +13,7 @@
   border: 2px solid $color-black;
   color: $color-white;
   padding: 1rem;
-  border-radius: 10px;
+  border-radius: $border-radius-input-standard;
   margin-bottom: 0;
 }
 
