--- a/game/client/src/pages/home/components/login/_auth-view.scss
+++ b/game/client/src/pages/home/components/login/_auth-view.scss
@@ -7,7 +7,12 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: $px-12;
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: $px-8;
+    }
 
     h2 {
       margin: 0;
